--- a/GridviewExample/GridviewExample/GridviewExample.csproj
+++ b/GridviewExample/GridviewExample/GridviewExample.csproj
@@ -32,11 +32,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GridView.cs" />
-    <Compile Include="EventArgs{T}.cs" />
-    <Compile Include="ItemCell.cs" />
-    <Compile Include="ItemObject.cs" />
-    <Compile Include="GridViewExample.cs" />
+    <Compile Include="GridExample.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.2.2.6243\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.2.2.6243\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
